Fixed Maps Callback 1

--- a/feedback.html
+++ b/feedback.html
@@ -158,7 +158,7 @@
                     data-animation-duration="500"
                     data-animation-delay="600"
                     data-animation-distance="25px">
-      <!--         <div class="dividewhite4"></div> -->
+                  <div class="dividewhite4"></div> 
                   <div id="form-messages"></div>
                   <form id="ajax-contact" method="post" action="php/form.php" class="wpcf7-form">
                      <div class="field">
