--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
               data-animation-distance="200px">
             <div class="padding-50 flex-panel">
                <h3 class="font-accident-two-normal uppercase title">Professional skills</h3>
+                <h4 class="font-accident-two-normal uppercase title">
+                 &nbsp;Time Spent on
+                </h4>
                <div class="dividewhite1"></div>
                <div class="row">
 
