Updated Website with spacings

--- a/blog-3-col.html
+++ b/blog-3-col.html
@@ -121,7 +121,7 @@
                 data-animation-origin="right"
                 data-animation-duration="400"
                 data-animation-delay="200"
-                data-animation-distance="50px">&nbsp;&nbsp;Many Projects to be uploaded!</h4>
+                data-animation-distance="50px">Many Projects to be uploaded!</h4>
          </div>
       </section>
 
