--- a/contacts.html
+++ b/contacts.html
@@ -120,7 +120,7 @@
                 data-animation-origin="right"
                 data-animation-duration="400"
                 data-animation-delay="200"
-                data-animation-distance="50px">&nbsp;&nbsp;Please feel free to reach me on </h4>
+                data-animation-distance="50px">Please feel free to reach me on </h4>
         <!--    <p class="small color01"
                data-animation-origin="right"
                data-animation-duration="400"
