--- a/feedback.html
+++ b/feedback.html
@@ -120,7 +120,7 @@
                 data-animation-origin="right"
                 data-animation-duration="400"
                 data-animation-delay="200"
-                data-animation-distance="50px">&nbsp;&nbsp;Your feedback is very important please write for me</h4>
+                data-animation-distance="50px">Your feedback is very important please write for me</h4>
        <!--     <p class="small color01"
                data-animation-origin="right"
                data-animation-duration="400"
@@ -160,7 +160,7 @@
                     data-animation-distance="25px">
                   <div class="dividewhite4"></div> 
                   <div id="form-messages"></div>
-                  <form id="ajax-contact" method="post" action="php/form.php" class="wpcf7-form">
+                  <form id="ajax-contact" method="post" action="php/form.php" class="wpcf7-form" data-abide>
                      <div class="field">
                         <!--<label for="name">Name:</label>-->
                         <input type="text" id="name" name="name" placeholder="Name" required>
