--- a/index.html
+++ b/index.html
@@ -231,31 +231,31 @@
                <div class="dividewhite4"></div>
                <div class="experience">
                   <ul class="">
-                     <li class="date">01/2011 - 08/2011</li>
+                     <li class="date">09/2017 - Present</li>
                      <li class="company uppercase">
                         <a>
-                           IIT Bombay
+                           Red Thread Communications
                         </a>
                      </li>
-                     <li class="position">Intern</li>
+                     <li class="position">Web Developer</li>
                   </ul>
                   <ul class="">
-                     <li class="date">08/2012 - 08/2014</li>
+                     <li class="date">05/2017 - 08/2017</li>
                      <li class="company uppercase">
                         <a>
-                           Skyfi Labs
-                        </a>
-                     </li>
-                     <li class="position">Engineer</li>
-                  </ul>
-                  <ul class="">
-                     <li class="date">09/2014 - 12/2015</li>
-                     <li class="company uppercase">
-                        <a>
-                           ReTiSense
+                           Infinite Key
                         </a>
                      </li>
                      <li class="position">Software Engineer</li>
+                  </ul>
+                  <ul class="">
+                     <li class="date">01/2016 - 04/2017</li>
+                     <li class="company uppercase">
+                        <a>
+                           Grand Valley State University
+                        </a>
+                     </li>
+                     <li class="position">Software Developer</li>
                   </ul>
                </div>
                <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
