--- a/resume.html
+++ b/resume.html
@@ -328,7 +328,7 @@
             <div class="dividewhite4"></div>
 
             <ul class="timeline-vert timeline">
-                <li class="timeline-inverted info">
+               <!-- <li class="timeline-inverted info">
                   <div class="timeline-badge warning"><i class="flaticon-profile5"></i></div>
                   <div class="timeline-panel"
                        data-animation-origin="right"
@@ -345,7 +345,7 @@
                         </p>
                      </div>
                   </div>
-               </li>
+               </li> -->
                               <li>
                   <div class="timeline-badge danger"><i class="flaticon-pens15"></i></div>
                   <div class="timeline-panel"
