--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
                      <li class="date">09/2017 - Present</li>
                      <li class="company uppercase">
                         <a>
-                           Red Thread Communications
+                           Walmart
                         </a>
                      </li>
-                     <li class="position">Web Developer</li>
+                     <li class="position">Associate Engineer</li>
                   </ul>
                   <ul class="">
                      <li class="date">05/2017 - 08/2017</li>
@@ -255,7 +255,7 @@
                            Grand Valley State University
                         </a>
                      </li>
-                     <li class="position">Software Developer</li>
+                     <li class="position">Software Developer </li>
                   </ul>
                </div>
                <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
