--- a/resume.html
+++ b/resume.html
@@ -338,8 +338,8 @@
                      <p class="timeline-time fontcolor-invert">2017 - Present</p>
                      <div class="timeline-photo timeline-samuel-06"></div>
                      <div class="timeline-heading">
-                        <h4 class="font-accident-two-normal uppercase">Red Thread Communications</h4>
-                        <h6 class="uppercase">Web Developer (Contractor)</h6>
+                        <h4 class="font-accident-two-normal uppercase">Walmart </h4>
+                        <h6 class="uppercase">Associate Engineer </h6>
                         <p>
                          - Coordinate closely with various teams to identify and resolve issues in a timely manner <br/>
                          - Take charge of working with database updates, including Oracle, Java, JIRA, Oracle Catalog, ATOM, Postman, Apache
