Updated Resume and job position

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                      <h2 class="cd-headline clip is-full-width font-accident-two-light">
                        <!-- <span>Experienced </span> -->
                         <span class="cd-words-wrapper">
-                           <b class="is-visible">&nbsp;&nbsp;Software Engineer</b>
-                           <b>&nbsp;&nbsp;iOS Developer</b>
+                           <b class="is-visible">&nbsp;&nbsp;Mobile Developer</b>
+                           <b>&nbsp;&nbsp;Software Engineer</b>
                            <b>&nbsp;&nbsp;Web Developer</b>
                         </span>
                      </h2>
@@ -231,13 +231,22 @@
                <div class="dividewhite4"></div>
                <div class="experience">
                   <ul class="">
-                     <li class="date">09/2017 - Present</li>
+                     <li class="date">03/2019 - Present</li>
+                     <li class="company uppercase">
+                        <a>
+                           GAP Inc
+                        </a>
+                     </li>
+                     <li class="position">Sr.Mobile Engineer</li>
+                  </ul>
+                   <ul class="">
+                     <li class="date">09/2017 - 03/2019</li>
                      <li class="company uppercase">
                         <a>
                            Walmart
                         </a>
                      </li>
-                     <li class="position">Associate Engineer</li>
+                     <li class="position">Sr.Associate Engineer</li>
                   </ul>
                   <ul class="">
                      <li class="date">05/2017 - 08/2017</li>
@@ -283,11 +292,11 @@
                              data-progressbar-trailcolor="#fff"
                              data-progressbar-to='{"color": "#51f2ec", "width": 4}'
                              data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.75">
+                             data-progressbar-value="0.70">
                         </div>
                         <h4 class="font-accident-two-bold uppercase">Mobile Development</h4>
                         <p class="font-regular-normal">
-                           iOS Mobile applications such as Stridalyzer, Upward Bound, Infinite Key and many more projects. 
+                            I like to spend 70% of my time performing my professional activities.
                         </p>
                         <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
                      </div>
@@ -304,11 +313,11 @@
                              data-progressbar-trailcolor="#fff"
                              data-progressbar-to='{"color": "#ffd200", "width": 4}'
                              data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.90">
+                             data-progressbar-value="0.30">
                         </div>
-                        <h4 class="font-accident-two-bold uppercase">Web Technologies</h4>
+                        <h4 class="font-accident-two-bold uppercase">Inhouse and Teaching</h4>
                         <p class="font-regular-normal">
-                            Responsive web portal for ReTiSense, Upward Bound, Skyfi Labs and many more.  
+                            I like to spend 15% of my time building Inhouse projects and Teaching.  
                         </p>
                         <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
                      </div>
@@ -323,11 +332,11 @@
                              data-progressbar-trailcolor="#fff"
                              data-progressbar-to='{"color": "#F09C88", "width": 4}'
                              data-progressbar-from='{"color": "#3498db", "width": 4}'
-                             data-progressbar-value="0.65">
+                             data-progressbar-value="0.30">
                         </div>
-                        <h4 class="font-accident-two-bold uppercase">Application Programming</h4>
+                        <h4 class="font-accident-two-bold uppercase">Technology and Improvement</h4>
                         <p class="font-regular-normal">
-                           Developed java based ILP, database applications and many more. 
+                           I like to spend 15% of my time improving my technical skills and follow technology trend.  
                         </p>
                         <a href="resume.html" class="btn btn-wh-trans btn-xs">Learn More</a>
                      </div>
